testsuite/tests/typecheck/should_fail/tcfail002.stderr

tcfail002.hs:4:7: error: [GHC-25897]
    • Couldn't match expected type ‘a’ with actual type ‘[a]’
      ‘a’ is a rigid type variable bound by
        the inferred type of c :: [a] -> a
        at tcfail002.hs:(3,1)-(4,7)
    • In the expression: z
      In an equation for ‘c’: c z = z
    • Relevant bindings include
        z :: [a] (bound at tcfail002.hs:4:3)
        c :: [a] -> a (bound at tcfail002.hs:3:1)
